--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,7 +20,9 @@ jobs:
           allow-prerelease-opam: true
 
       - name: Deps
-        run: opam install odig rcontext   mtime
+        run: opam install odig mtime
+
+      - run: opam install rcontext
 
       - name: Build
         run: opam exec -- odig odoc --cache-dir=_doc/ rcontext
