--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,9 +19,7 @@ jobs:
           dune-cache: true
           allow-prerelease-opam: true
 
-      - name: Deps
-        run: opam install odig mtime
-
+      - run: opam install odig mtime thread-local-storage # depopts
       - run: opam install rcontext
 
       - name: Build
