--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         ocaml-compiler:
             - '4.08'
             - '4.14'
-            - '5.1'
+            - '5.2'
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -36,6 +36,6 @@ jobs:
       - run: opam exec -- dune build @install
 
       # with depopts
-      - run: opam install mtime
+      - run: opam install mtime thread-local-storage
       - run: opam exec -- dune build @install @runtest
 
