--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - uses: actions/checkout@main
       - name: Use OCaml ${{ matrix.ocaml-compiler }}
-        uses: ocaml/setup-ocaml@v2
+        uses: ocaml/setup-ocaml@v3
         with:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
           dune-cache: true
@@ -36,6 +36,6 @@ jobs:
       - run: opam exec -- dune build @install
 
       # with depopts
-      - run: opam install mtime thread-local-storage
+      - run: opam install mtime ptime thread-local-storage
       - run: opam exec -- dune build @install @runtest
 
